# GetCov

./: Cargo.toml  README.md  report.json
libs/llvm-cov-json-rs/: Cargo.toml
libs/llvm-cov-json-rs/src/types/: file.rs  region.rs
src/: args.rs  config.rs  error.rs  execution.rs  functions.rs  main.rs  report.rs  uncovered.rs
src/analyzer/: extract_functions.rs  mod.rs
src/analyzer/uncovered/: mod.rs  model.rs  report.rs  uncovered_analyzer.rs
src/cli/: args.rs  mod.rs
src/collector/: covmap.rs  execution.rs  mod.rs
tests/: integration_test.rs  intergration_test.rs
tests/c_code/: Makefile  main  main.c
