[package]
name = "getcov"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5"
env_logger = "0.11"
goblin = "0.9"
log = "0.4"
serde_json = "1.0"
tempfile = "3.15"
thiserror = "2.0"
uuid = { version = "1.11.0", features = ["v4"] }
llvm-cov-json = { path = "libs/llvm-cov-json-rs" }
serde = "1.0"
regex = "1.11"
wait-timeout = "0.2"

[dev-dependencies]
serial_test = "3.2"

[[bin]]
name = "getcov"
path = "src/main.rs"
